<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSecondary"
        android:elevation="5dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <!-- Container for logo to center it horizontally -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <!-- Add ImageView for Logo -->
            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?attr/toolbarIcon"
                android:paddingLeft="15dp"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view"
        android:layout_below="@id/toolbar"
        android:layout_above="@+id/bottom_layout"
        android:background="?attr/colorPrimary" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sohnebuch"
        android:text="@string/welcome_text"
        android:textColor="?attr/colorPrimaryVariant"
        android:gravity="center"
        android:textSize="28dp"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:id="@+id/recommended_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false">

            <!-- Box 1 -->
            <LinearLayout
                android:id="@+id/prompt_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                android:gravity="center"
                android:background="@drawable/recommended_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sohnebuch"
                    android:text="@string/recommended_prompt_one"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="16sp"
                    android:padding="8dp" />
            </LinearLayout>

            <!-- Box 2 -->
            <LinearLayout
                android:id="@+id/prompt_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                android:gravity="center"
                android:background="@drawable/recommended_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sohnebuch"
                    android:text="@string/recommended_prompt_two"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="16sp"
                    android:padding="8dp" />

            </LinearLayout>

            <!-- Box 3 -->
            <LinearLayout
                android:id="@+id/prompt_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                android:gravity="center"
                android:background="@drawable/recommended_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sohnebuch"
                    android:text="@string/recommended_prompt_three"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="16sp"
                    android:padding="8dp" />

            </LinearLayout>

            <!-- Box 4 -->
            <LinearLayout
                android:id="@+id/prompt_four"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                android:gravity="center"
                android:background="@drawable/recommended_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sohnebuch"

                    android:text="@string/recommended_prompt_four"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="16sp"
                    android:padding="8dp" />

            </LinearLayout>

        </GridLayout>
    </RelativeLayout>

    <RelativeLayout
        android:background="?attr/colorSecondary"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:elevation="5dp"
        android:id="@+id/bottom_layout">

        <EditText
            android:id="@+id/message_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:layout_toLeftOf="@id/send_btn"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/sohnebuch"
            android:hint="@string/message_hint"
            android:padding="16dp"
            android:textColor="?colorPrimaryVariant"
            android:textColorHint="?attr/colorSecondary" />

        <ImageButton
            android:id="@+id/send_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/sendbutton" />
    </RelativeLayout>
</RelativeLayout>
